STYLE: Experiment with red colours and alert enhancements
This commit explores using red tones instead of purple. Borders have been removed for a cleaner design, and alert messages are now highlighted.

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -15,7 +15,7 @@
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top" src="{% static 'images/default.jpg' %}" alt="placeholder image">
                                 {% else %}
-                                <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{ post.title }}">
+                                <img class="card-img-top" src=" {{ topic.featured_image.url }}" alt="{{ topic.title }}">
                                 {% endif %}
                                 <div class="image-flash">
                                     <!-- <p class="author">Author: {{ topic.author }}</p> -->
