--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -31,8 +31,8 @@ body {
   background-color: #f9fafc;
 }
 
+/* Topic cards */
 .card {
-  border: 2px solid #b1a8b9;
   background-color: transparent;
 }
 
@@ -69,7 +69,7 @@ body {
 }
 
 .masthead-text {
-  background-color: #692fc8;
+  background-color: #594275;
   color: white;
   position: relative;
 }
@@ -163,9 +163,11 @@ body {
 
 .btn-like {
   color: #9d88b3;
-  border: none;
+  border: none; 
   background: transparent;
 }
+
+/* Deletion button */
 
 .btn-delete {
   color: #fff;
