STYLE: Update card borders from static files
This commit updated static files to ensure the card borders do not appear on the deployed version.

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -34,6 +34,7 @@ body {
 /* Topic cards */
 .card {
   background-color: transparent;
+  border: none;
 }
 
 .image-container {
@@ -184,6 +185,11 @@ body {
   color: #fff;
   background: #ba0000;
   border: none;
+}
+
+.alert{
+  background-color: #692fc8;
+  color: #fff;
 }
 
 .faded {
