ENHANCE: Update index.html to improve accessibility
This commit improves accessibility by replacing <p> with <article> for the description of topics. This change enhances semantic HTML usage and improves accessibility for screen readers and other assistive technologies.

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -18,15 +18,12 @@
                                 <img class="card-img-top" src=" {{ topic.featured_image.url }}" alt="{{ topic.title }}">
                                 {% endif %}
                                 <div class="image-flash">
-                                    <!-- <p class="author">Author: {{ topic.author }}</p> -->
                                 </div>
                             </div>
                             <a href="{% url 'topic_detail' topic.slug %}" class="topic-link">
                                 <h2 class="card-title">{{ topic.title }}</h2>
-                                <p class="card-text">{{ topic.description }}</p>
+                                <article class="card-text">{{ topic.description }}</article>
                             </a>
-
-                            <!-- <p class="card-text text-muted h6">{{ topic.created_on}} -->
                             </p>
                         </div>
                     </div>
