--- a/about_page/templates/about_page/about_page.html
+++ b/about_page/templates/about_page/about_page.html
@@ -19,13 +19,8 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 my-5 text-center">
-            <h2>Let's collaborate!</h2>
-            <p>I believe in the power of shared knowledge and collective effort.
-                Whether you have a project in mind, wish to co-author
-                an article, or simply want to brainstorm some ideas,
-                I'm excited to hear from you. Fill out the form
-                and we can get the ball rolling!</p>
-
+            <h2>Leave a feedback</h2>
+            <p>Please feel free to leave a feedback or request of collaboration, if you are interested in this project. I have big plans, and I'll be happy to hear from you!</p>
             <!-- add your form here. Your submit button should 
                                         have the classes of btn, btn-secondary -->
                 <form method="post">
