STYLE: Update images to accompany topic titles on the homepage
This commit experiments with the images in the hopepage.

Changes:
- remove images with red background;
- add purple and white squares.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,13 @@ body {
   color: lightgray;
 }
 
+/* Topic images  */
+.image-container {
+  width:15rem;
+  height: 15rem;
+}
+
+
 .btn-signup {
   background-color: #9351ff;
   color: #fff;
