WORK-IN-PROGRESS: Refine homepage style with Bootstrap and CSS
This commit includes ongoing work to improve the website's appearance and layout using Bootstrap and custom CSS styles.

Changes:
- adjust font sizes for better readability;
- implement responsive design for various screen sizes.

Note: This commit is a work in progress and does not represent the final version.

--- a/content_management/templates/content_management/resource_detail.html
+++ b/content_management/templates/content_management/resource_detail.html
@@ -3,7 +3,9 @@
     <!-- Reel Embed Code -->
     {% if content.source == 'instagram' %}
     <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
+    <h2 class="title-resource">{{ content.title | safe }}</h2>
     {{ content.embed_code | safe }}
+   
     {% elif content.source == 'youtube' %}
     <!-- Use Youtube embed template -->
     <iframe width="560" height="315"
