--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,11 +2,16 @@ body {
   background-color: #f9fafc;
 }
 
+/* Website title: brand */
 .brand {
   font-family: Lato, sans-serif;
   font-size: 1.4rem;
   font-weight: 700;
   color: #4a4a4f;
+}
+
+.another-colour {
+  color: #9D88B3;
 }
 
 .purple-part {
@@ -35,6 +40,12 @@ body {
 .card {
   background-color: transparent;
   border: none;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: 1rem 1rem;
+    width: min-content;
 }
 
 .image-container {
@@ -115,6 +126,10 @@ body {
 .topic-subtitle {
   margin-left: 5%;
   color: lightgray;
+}
+
+.title-resource {
+  font-size: 1.5rem;
 }
 
 /* Topic images  */
