--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -2,11 +2,16 @@ body {
   background-color: #f9fafc;
 }
 
+/* Website title: brand */
 .brand {
   font-family: Lato, sans-serif;
   font-size: 1.4rem;
   font-weight: 700;
   color: #4a4a4f;
+}
+
+.another-colour {
+  color: #9D88B3;
 }
 
 .purple-part {
@@ -116,6 +121,17 @@ body {
   margin-left: 5%;
   color: lightgray;
 }
+
+.title-resource {
+  font-size: 1.5rem;
+}
+
+/* Topic images  */
+.image-container {
+  width:15rem;
+  height: 15rem;
+}
+
 
 .btn-signup {
   background-color: #9351ff;
