--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,26 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="purple-part brand">Narcissistic <span
-                        class="brand">Personality </span>Disorder <span class="brand">| Resources</span></span></a>
+            <!-- wrapper div for the title to control its size -->
+            <div class="navbar-brand-wrapper">
+                <a class="navbar-brand" href="{% url 'home' %}">
+                    <span class="purple-part brand">
+                        Narcissistic</span>
+                    <span class="brand">
+                        Personality</span>
+                    <!-- Bootstrap grid system -->
+                    <div class="row">
+                        <div class="col-lg-12 col-">
+                            <span class="brand d-lg-inline d-block">
+                                <span class="purple-part">
+                                    Disorder</span>
+                                <span class="another-colour">
+                                    | Resources</span>
+                            </span>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
