--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -10,7 +10,7 @@
                 {% for topic in topic_list %}
                 <div class="col-md-6"> <!-- Use col-md-6 for two columns -->
                     <div class="card mb-4 h-95">
-                        <div class="card-body">
+                        <div class="card-body card-topic-title">
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top" src="{% static 'images/default.jpg' %}"
