--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,8 +10,8 @@ body {
   color: #4a4a4f;
 }
 
-.another-colour {
-  color: #9D88B3;
+.another-colour, .text-muted {
+  color: #9D88B3 !important;
 }
 
 .purple-part {
@@ -42,10 +42,24 @@ body {
   border: none;
 }
 
+.card-title {
+      font-size: 1.66rem;
+}
+
+.card-text {
+  font-size: 1rem;
+
+}
+
 .card-body {
     flex: 1 1 auto;
     padding: 1rem 1rem;
-    width: min-content;
+    
+}
+
+.card-topic-title {
+  width: min-content;
+
 }
 
 .image-container {
@@ -134,8 +148,8 @@ body {
 
 /* Topic images  */
 .image-container {
-  width:15rem;
-  height: 15rem;
+  width:13rem;
+  height: 13rem;
 }
 
 
