--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                 <a class="navbar-brand" href="{% url 'home' %}">
                     <span class="purple-part brand">
                         Narcissistic</span>
-                    <span class="brand">
+                    <span class="brand purple-part">
                         Personality</span>
                     <!-- Bootstrap grid system -->
                     <div class="row">
@@ -49,7 +49,7 @@
                                 <span class="purple-part">
                                     Disorder</span>
                                 <span class="another-colour">
-                                    | Resources</span>
+                                    | Resources | </span>
                             </span>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarText">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}"
@@ -87,7 +87,7 @@
                     </li>
                     {% endif %}
                 </ul>
-                <span class="navbar-text text-muted">
+                <span class="navbar-text text-muted another-colour">
                     Educate yourself and break free
                 </span>
             </div>
