FEAT: Add custom error handlers
This commit adds a simple error communication for users. The error handlers pages could be improved in the future.

Changes:
- add custom error handling views for 404, 500, 403, and 405 errors;
- update settings to specify custom error handling views;
- test error handlers to ensure proper functionality.

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -10,8 +10,8 @@ body {
   color: #4a4a4f;
 }
 
-.another-colour {
-  color: #9D88B3;
+.another-colour, .text-muted {
+  color: #9D88B3 !important;
 }
 
 .purple-part {
@@ -40,6 +40,26 @@ body {
 .card {
   background-color: transparent;
   border: none;
+}
+
+.card-title {
+      font-size: 1.66rem;
+}
+
+.card-text {
+  font-size: 1rem;
+
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: 1rem 1rem;
+    
+}
+
+.card-topic-title {
+  width: min-content;
+
 }
 
 .image-container {
@@ -128,8 +148,8 @@ body {
 
 /* Topic images  */
 .image-container {
-  width:15rem;
-  height: 15rem;
+  width:13rem;
+  height: 13rem;
 }
 
 
@@ -214,4 +234,9 @@ body {
 
 .approval {
   color: #baa1d5;
+}
+
+/* Error pages */
+.underline-link {
+    text-decoration: underline;
 }
