STYLE: Add favicon and center topic detail banner
This commit tries to improve the appearance of the website.

Changes:
- add a favicon to improve site branding;
- in topic_detail.html, resize banner to occupy the entire row;
- in topic_detail.html, center the text inside the banner.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,18 +86,16 @@ body {
 }
 
 .masthead {
-  margin-top: 10px;
+  margin-top: 0.4rem;
   overflow: hidden;
   position: relative;
   display: inline-block;
-  height: 33vh;
   width: 100%;
 }
 
 .masthead-text {
   background-color: #594275;
   color: white;
-  position: relative;
 }
 
 .masthead-image {
@@ -133,12 +131,12 @@ body {
 }
 
 .topic-title {
-  margin-top: 10%;
-  margin-left: 5%;
+  margin-top: 5%;
+  /* margin-left: 5%; */
 }
 
 .topic-subtitle {
-  margin-left: 5%;
+  margin-bottom: 5%;
   color: lightgray;
 }
 
