FEAT: Add login protections to views that should only be viewable to authenticated users
This commit increases login protections and adds a login link in the comments section for non-authenticated users.

Changes:
- add login_required decorators to function based views and 'if statement' in partially protected views;
- make sure that when non-authenticated users scroll down in the topic page to the comments section, they are prompt to log in. This enhances user experience by providing a clear pathway for users to log in and engage with the comments.

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,10 +12,9 @@
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign In" %}</h3>
 
-      <p>{% blocktrans %}Welcome back to the Narcissistic Personality Disorder|Sources website. To leave a comment or like a post, please log in. If
-        you
-        have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
-        first.{% endblocktrans %}</p>
+      <p>{% blocktrans %}Welcome to the <b>Narcissistic Personality Disorder| Resources website</b>. 
+        To leave a comment or like a post, please log in. 
+        If you have not created an account yet, then <a class="link" href="{{ signup_url }}"><b>sign up</b></a> first.{% endblocktrans %}</p>
     </div>
   </div>
   <div class="row">
