--- a/homepage/templates/homepage/topic_detail.html
+++ b/homepage/templates/homepage/topic_detail.html
@@ -89,8 +89,9 @@
                     <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
                 {% else %}
-                <p>Log in to leave or see comments</p>
+                <p><a href="{% url 'account_login' %}">Login</a> to have access to the comments section</p>
                 {% endif %}
+                
             </div>
         </div>
     </div>
