DOCS: Update README.md adding Website Overview
This commit adds an introductory overview of the website to highlight project's goal.

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
 <head>
     <!-- Title -->
-    <title>Narcissism Personality Disorder: resources</title>
+    <title>Narcissism Personality Disorder: social resources</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Favicon -->
@@ -56,7 +56,7 @@
                                 <span class="purple-part">
                                     Disorder</span>
                                 <span class="another-colour">
-                                    | Resources | </span>
+                                    | Social Resources | </span>
                             </span>
                         </div>
                     </div>
