UI: Update text in sign-up and login pages
This commit updates the text displayed on the sign-up and login pages to improve clarity and user experience.
Please note that UI stands for USER INTERFACE and it will be used for commits that alter the text visible by users.

--- a/about_page/templates/about_page/about_page.html
+++ b/about_page/templates/about_page/about_page.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6 custom-background text-white text-justify card rounded-100 my-3 p-4">
+        <div class="col-md-6 custom-background text-white text-left card rounded-100 my-3 p-4">
                 <h2>{{ about_page.title }}</h2>
             {{ about_page.content | safe }}
         </div>
