--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,10 +11,9 @@
       <h3>{% trans "Sign Up" %}</h3>
 
       <p>{% blocktrans %}
-        Welcome back to the Narcissistic Personality Disorder|sources website.
+        Welcome back to the <b>Narcissistic Personality Disorder| Social Resources website</b>.
         Do you already have an account? Then please
-        <a class="link" href="{{ login_url }}">sign in</a>
-        instead.
+        <a class="link" href="{{ login_url }}">sign in</a> instead.
         {% endblocktrans %}
       </p>
     </div>
