FEAT: Add login links to messages prompting users to log in
This commit enhances the user experience by providing login links within messages displayed when user has not being logged in. Now, when users encounter such messages, they are presented with a convenient option to log in directly, improving the clarity and usability of the login process.

--- a/about_page/templates/about_page/about_page.html
+++ b/about_page/templates/about_page/about_page.html
@@ -14,7 +14,7 @@
                 <div class="text-center mb-4"> <!-- Add margin bottom -->
                     <h2>Get in touch <span class="form-custom-word">:)</span></h2>
                     <p>Feel free to leave <span class="form-custom-word">feedback</span> or a <span
-                            class="form-custom-word">collaboration request</span>. </br>
+                            class="form-custom-word">collaboration request</span>.
                         I have big plans and I'll be happy to hear from you!</p>
                 </div>
                 <!-- Form -->
