--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -5,7 +5,7 @@
 <!-- index.html content starts here -->
 <div class="container-fluid">
     <div class="row justify-content-center"> <!-- Center the row horizontally -->
-        <div class="col-md-4 mt-2">
+        <div class="col-lg-5 col-md-8 mt-2">
             <div class="row">
                 {% for topic in topic_list %}
                 <div class="col-md-6"> <!-- Use col-md-6 for two columns -->
