FIX: Resolve issue with Instagram reels and pagination
This commit addresses an issue where some Instagram reels were not displaying correctly on the page when the short version of the embed code was used. The bug was fixed by adding conditional loading of the Instagram embed script within the if statement of the resource_detail.html. Embed script is now included only when the content source is Instagram, ensuring proper rendering of the reels without affecting the loading of other content.

Additionally, to prevent overloading and improve performance, the pagination for the page was adjusted to display a maximum of 3 contents per page.

--- a/content_management/templates/content_management/resource_detail.html
+++ b/content_management/templates/content_management/resource_detail.html
@@ -5,7 +5,9 @@
     <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
     <h2 class="title-resource">{{ content.title | safe }}</h2>
     {{ content.embed_code | safe }}
-   
+    <!-- Add Instagram embed script here, only when source is Instagram -->
+    <script async src="//www.instagram.com/embed.js"></script>
+
     {% elif content.source == 'youtube' %}
     <!-- Use Youtube embed template -->
     <iframe width="560" height="315"
@@ -16,4 +18,6 @@
     </iframe>
     {% endif %}
 </div>
+
+
 {% endblock content %}
