--- a/about_page/templates/about_page/about_page.html
+++ b/about_page/templates/about_page/about_page.html
@@ -12,7 +12,7 @@
         <div class="col-md-6 border border-4 mb-4 mx-4 card rounded-100">
             <div class="card my-4">
                 <div class="text-center mb-4"> <!-- Add margin bottom -->
-                    <h2>Get in touch <span class="form-custom-word">:)</span></h2>
+                    <h2>Get in touch <span class="form-custom-word"></span></h2>
                     <p>Feel free to leave <span class="form-custom-word">feedback</span> or a <span
                             class="form-custom-word">collaboration request</span>.
                         I have big plans and I'll be happy to hear from you!</p>
