TEST: Test forms and views in homepage and about_page apps
This commit introduces Django testing in the mentioned apps to verify the functionality and validity of forms and views.

BUGS:
- Currently encountering the following error message in the homepage testing view: 404 != 200. Efforts are underway to resolve this issue.

--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
         <p class="text-end m-3">You are logged in as {{ user }} </p>
 
         {% else %}
-        <p class="text-end m-3">You are not logged in. </br>Login <a href="{% url 'account_login' %}">here</a>.</p>
+        <p class="text-end m-3">You are not logged in. </br>Log <a href="{% url 'account_login' %}">here</a>.</p>
         {% endif %}
 
         {% block content %}
