FEAT: Add button to return to homepage in Logout page
Change:
- add a button to return to the homepage in the sign-out page to allow users to cancel the sign-out process.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,7 +157,8 @@ body {
   font-weight: 500;
 }
 
-.btn-signup {
+.btn-signup, 
+.btn-cancel {
   background-color: #594275;
   color: #fff;
 }
@@ -173,7 +174,8 @@ body {
 }
 
 .btn-signup:hover,
-.btn-signup:active {
+.btn-signup:active,
+.btn-cancel:hover {
   background-color: #692fc8;
   color: #fff;
 }
