--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -22,6 +22,7 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <button class="btn btn-signup right" type="submit">{% trans 'Sign Out' %}</button>
+        <a href="{% url 'home' %}" class="btn btn-cancel">{% trans 'Cancel' %}</a> <!-- Button to return to homepage -->
       </form>
     </div>
   </div>
