DOCS: Update Bugs resolved section in TESTING.md
This commit provides details in the documentation about the resolution of the Instagram embedded reels issue.

--- a/content_management/templates/content_management/resource_detail.html
+++ b/content_management/templates/content_management/resource_detail.html
@@ -5,7 +5,7 @@
     <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
     <div class="title-resource">{{ content.title | safe }}</div>
     {{ content.embed_code | safe }}
-    <!-- Add Instagram embed script here, only when source is Instagram -->
+    <!-- Instagram embed script -->
     <script async src="//www.instagram.com/embed.js"></script>
 
     {% elif content.source == 'youtube' %}
